# libPorpoise

./: .gitignore  AURORA_RENDERING_PIPELINE.md  CMakeLists.txt  GXDRAW_COMPARISON.md  ONETRI_FUNCTION_CALLS.md  README.md  build.bat  libPorpoise.sln  libPorpoise.vcxproj  vi_config.ini
demos/PikminDemo/: CMakeLists.txt
demos/PikminDemo/include/: Age.h  Animator.h  Ayu.h  BoundBox.h  Camera.h  CoreNode.h  Creature.h  EffectMgr.h  GameMath.h  GameString.h  Geometry.h  GfxObject.h  Graphics.h  Matrix4f.h  PaniAnimator.h  Pellet.h  PelletAnimator.h  PelletView.h  Stream.h  Vector.h  gameflow.h  sysNew.h  system.h  teki.h  types.h
demos/PikminDemo/include/Dolphin/: OSError.h  PPCArch.h  ar.h  dvd.h  gx.h  mtx.h  os.h  pad.h  vec.h  vi.h
demos/PikminDemo/include/Dolphin/GX/: GXBump.h  GXData.h  GXEnum.h  GXFifo.h  GXFrameBuffer.h  GXGeometry.h  GXHardware.h  GXLight.h  GXMisc.h  GXPerf.h  GXPixel.h  GXTev.h  GXTexture.h  GXTransform.h  GXTypes.h
demos/PikminDemo/include/Dolphin/OS/: OSCache.h  OSContext.h  OSExi.h  OSInterrupt.h  OSMessage.h  OSMutex.h  OSThread.h  OSUtil.h
demos/PikminDemo/include/PSU/: Tree.h
demos/PikminDemo/include/TAI/: Beatle.h  Dororo.h  KabekuiA.h  KabekuiB.h  KabekuiC.h  Mar.h  Miurin.h  Tank.h
demos/PikminDemo/include/nlib/: Geometry.h  Graphics.h
demos/PikminDemo/include/std/: Math.h
demos/PikminDemo/include/stl/: extras.h  mem.h  string.h
demos/PikminDemo/include/zen/: DrawProgre.h  DrawWorldMap.h  EffectMgr2D.h  Math.h  MenuPanelMgr.h  Number.h  ogMenu.h  ogSub.h  particle.h
demos/PikminDemo/src/MSL_C/PPCEABI/bare/H/: common_float_tables.c  fminmaxdim.c  inverse_trig.c  trigf.c
demos/PikminDemo/src/gx/: GXLight.c
demos/PikminDemo/src/jaudio/: dvdthread.c  heapctrl.c
demos/PikminDemo/src/mtx/: mtx.c  mtx44.c
demos/PikminDemo/src/plugPikiColin/: animMgr.cpp  parameters.cpp
demos/PikminDemo/src/plugPikiKando/: creature.cpp  mapcode.cpp  soundMgr.cpp
demos/PikminDemo/src/plugPikiNakata/: nlibgeometry.cpp  taijudgementactions.cpp  taikinoko.cpp  taiswallow.cpp  tekibteki.cpp  tekiconditions.cpp
demos/PikminDemo/src/plugPikiNishimura/: MizuAi.cpp  nscalculation.cpp
demos/PikminDemo/src/plugPikiOgawa/: ogMenu.cpp  ogMessage.cpp  ogPause.cpp  ogSub.cpp  ogTest.cpp  ogTitle.cpp
demos/PikminDemo/src/plugPikiYamashita/: P2DGrafContext.cpp  P2DOrthoGraph.cpp  P2DPerspGraph.cpp  P2DPicture.cpp  P2DPrint.cpp  PSUList.cpp  TAIAattack.cpp  TAImiurin.cpp  alphaWipe.cpp  drawCMbest.cpp  drawCMcourseSelect.cpp  drawCMresult.cpp  drawCMscore.cpp  drawCMtitle.cpp  drawCommon.cpp  drawGameInfo.cpp  drawHiScore.cpp  drawMenu.cpp  drawMenuBase.cpp  drawSaveFailure.cpp  drawUfoParts.cpp  drawWorldMap.cpp  effectMgr.cpp  gameCourseClear.cpp  menuPanelMgr.cpp  particleGenerator.cpp  particleManager.cpp  ptclGenPack.cpp  tekiyteki.cpp  zenMath.cpp
demos/PikminDemo/src/sysCommon/: ayuStack.cpp  camera.cpp  grLight.cpp  graphics.cpp  id32.cpp  matMath.cpp  node.cpp  shapeBase.cpp  stdSystem.cpp  stream.cpp  string.cpp  sysMath.cpp
demos/PikminDemo/src/sysDolphin/: dgxGraphics.cpp  sysNew.cpp  system.cpp  texture.cpp
demos/arcdemo/: makefile
demos/arcdemo/src/: arctest1.c  arctest2.c  arctest3.c
demos/axdemo/: makefile
demos/axdemo/include/: axartdemo.h  delay.h
demos/axdemo/src/: axart3ddemo.c  axstream.c  delay.c  seqdemo.c  syndemo.c
demos/carddemo/: makefile
demos/carddemo/include/: cardutil.h  cont.h  create-1icon.h  create-8icon.h  create-bnr-4icon.h
demos/carddemo/src/: cardutil.c  create-1icon.c  create-8icon.c  list.c  (+5 more)
demos/dtkdemo/: makefile
demos/dvddata/: opening.bnr
demos/dvddemo/: makefile
demos/gddemo/: makefile
demos/gxdemo/: makefile  makesf  pcmakefile
demos/hiodemo/: buildhostscript  makefile
demos/osdemo/: makefile
demos/paddemo/: makefile
demos/reldemo/: active.lst  import.lst  makefile  partialD.lcf  staticD.lcf
demos/samplemake/: Makefile  smp-onetri.c
demos/spdemo/: makefile
demos/videmo/: makefile
docs/: API.md  DVD_FILESYSTEM.md  PPCARTHUR_PATTERNS.md  REFERENCE_MATERIAL_POLICY.md
examples/: CMakeLists.txt  gx_demo.c  onetri_demo.c  onetri_test.c  simple.c
include/: demo.h
include/dolphin/: OSFastCast.h  VIConfig.h  db.h  demo.h  dvd.h  gx.h  mtx.h  os.h  pad.h  si.h  tpl.h  types.h  vi.h
rust/: Cargo.toml
rust/src/: lib.rs
src/ar/: ARQ.c
src/base/: PPCArch.c  PPCPm.c
src/card/: CARDBios.c  CARDCheck.c  CARDCreate.c  CARDDelete.c  CARDFormat.c  CARDMount.c  CARDOpen.c  CARDRead.c  CARDRename.c  CARDStat.c  CARDWrite.c
src/db/: db.c  dbprintf.c
src/demo/: DEMOFont.c  DEMOFont.cpp  DEMOInit.c  DEMOInit.cpp  DEMOPad.c  DEMOPad.cpp  DEMOPuts.cpp  DEMOStats.cpp  DEMOTpl.c  DEMOWin.c  DEMOWin.cpp
src/dvd/: DVD.c
src/gfx/: common.cpp  common.hpp  gx_fmt.hpp  gx_gl.h  gx_gl_loader.c  gx_gl_loader.h  gx_helpers.c  gx_helpers.h  gx_init.c  gx_init.h  gx_shader.c  gx_shader.h  gx_state.c  gx_state.cpp  gx_state.h  gx_state.hpp  gx_state_helpers.c  gx_state_helpers.h  gx_update_state.c  gx_update_state.h  internal.hpp  logging.cpp  math.hpp  render.cpp  render.hpp  render_acpc.cpp  rust_renderer_bridge.cpp  rust_renderer_bridge.hpp  shader_info.hpp  texture.cpp  texture.hpp  window.hpp
src/gx/: GXBump.c  GXBump.cpp  GXCull.c  GXCull.cpp  GXDispList.c  GXDispList.cpp  GXDraw.c  GXDraw.cpp  GXExtra.c  GXExtra.cpp  GXFifo.c  GXFifo.cpp  GXFrameBuffer.c  GXFrameBuffer.cpp  GXGeometry.c  GXGeometry.cpp  GXGet.c  GXGet.cpp  GXLighting.c  GXLighting.cpp  GXManage.c  GXManage.cpp  GXPerf.c  GXPixel.c  GXPixel.cpp  GXStubUtils.h  GXTev.c  GXTev.cpp  GXTexture.c  GXTexture.cpp  GXTransform.c  GXTransform.cpp  GXVert.c  GXVert.cpp  gx.hpp  gx_stream.h  pc_gx.c  pc_gx_internal.h  pc_gx_tev.c  pc_gx_texture.c  (+4 more)
src/mtx/: mtx.c
src/os/: OS.c  OSAlarm.c  OSAlloc.c  OSCache.c  OSContext.c  OSError.c  OSFastCast.c  OSInterrupt.c  OSMemory.c  OSMessage.c  OSMutex.c  OSStopwatch.c  OSThread.c  OSThread.cpp  OSTime.c
src/pad/: PAD.c  PADClamp.c  PADConfig.c
src/porpoise/: Guard.c
src/si/: SI.c
src/vi/: VI.c  VIConfig.c
src/win32/: Padclamp.c  dvd.c  os.c  pad.c  vi.c  win32.c
(+450 files in other folders)
